ci/policy-tests/kyverno/restricted/restrict-seccomp-strict/pod-ephemeral-container-unconfined-fail.yaml
---
# EXPECTED: `fail`.
#
# THE THREE-LIST ASSERTION, second of two: a `kubectl debug` shell asking for `Unconfined` on a
# pod that is otherwise fully confined -- which is the realistic way this check gets tripped.
apiVersion: v1
kind: Pod
metadata:
  name: debugged-workload-5687cbcbf5-bkswh
  namespace: default
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: app
    image: registry.k8s.io/pause:3.10
  ephemeralContainers:
  - name: debugger
    image: registry.k8s.io/pause:3.10
    securityContext:
      seccompProfile:
        type: Unconfined
